--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
 				"-g",
 				"${workspaceFolder}\\src\\*.cpp",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"${fileDirname}\\main.exe"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
