--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,12 @@
 				"-g",
 				"${workspaceFolder}\\src\\*.cpp",
 				"-o",
-				"${fileDirname}\\main.exe"
+				"${fileDirname}\\main.exe",
+				"-IC:/sdk/SDL2-2.0.16/x86_64-w64-mingw32/include",
+				"-LC:/sdk/SDL2-2.0.16/x86_64-w64-mingw32/lib",
+				"-lmingw32",
+				"-lSDL2main",
+				"-lSDL2"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
