Added screen gui

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,7 @@
 				"-LC:/sdk/SDL2-2.0.16/x86_64-w64-mingw32/lib",
 				"-LC:/sdk/x86_64-w64-mingw32/lib",
 				"-lmingw32",
-				
+				"-lSDL2_ttf",
 				"-lSDL2main",
 				"-lSDL2"
 			],
